tests/paczka1/fuzzy1/31137024.err
Error in line 2: kuD3MmclDX S76 56,7
Error in line 6: A4 S733 19,4
Error in line 8: A4 S733 93,1
Error in line 14: A4 S76 11,9
Error in line 15: Csacc A35 24,5
Error in line 30: A4 A35 22,8
Error in line 34: A4 A35 3,6
Error in line 28: iJlOg S733 32,2
Error in line 29: Lgpp37qJM2G S733 98,8
